--- a/assets/css/scss/colors.scss
+++ b/assets/css/scss/colors.scss
@@ -1,2 +1,4 @@
-$background: #fff5e8;
-$primary-color: #1a1a1a;
+$background: #f7ead4;
+$text-color: #1a1a1a;
+$secondary-color: #d99343;
+$tertiary-color: #bab76e;
