--- a/assets/css/scss/base.scss
+++ b/assets/css/scss/base.scss
@@ -3,16 +3,16 @@
 *,
 *:before,
 *:after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html {
-  font-size: 14px;
-  scroll-behavior: smooth;
+	font-size: 14px;
+	line-height: 1.5;
+	scroll-behavior: smooth;
 }
 
 body {
-  background: $background;
-
-  padding: 2rem;
+	background: $background;
+	padding: 2rem;
 }
