--- a/assets/css/scss/typography.scss
+++ b/assets/css/scss/typography.scss
@@ -185,6 +185,15 @@ hr {
 .projects {
 	list-style: none;
 	padding-left: 0;
+	
+
+	.project {
+		margin-bottom: 2.5rem;
+	}
+
+	p {
+		margin-top: .5rem;
+	}
 
 	a {
 		font-family: $display-font;
@@ -199,6 +208,7 @@ hr {
 		position: relative;
 		overflow: visible;
 		z-index: 2;
+		line-height: 1;
 		&:hover {
 			color: $secondary-color;
 			&:after {
