--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -475,6 +476,12 @@ hr {
   list-style: none;
   padding-left: 0;
 }
+.projects .project {
+  margin-bottom: 2.5rem;
+}
+.projects p {
+  margin-top: 0.5rem;
+}
 .projects a {
   font-family: "RoslindaleCondensed";
   color: #1a1a1a;
@@ -488,6 +495,7 @@ hr {
   position: relative;
   overflow: visible;
   z-index: 2;
+  line-height: 1;
 }
 .projects a:hover {
   color: #d99343;
@@ -595,6 +603,7 @@ img {
   align-items: flex-start;
   margin-bottom: 10rem;
   gap: 0;
+  justify-content: space-between;
 }
 .about-main .info {
   z-index: 1;
@@ -602,6 +611,10 @@ img {
   flex-direction: column;
   width: 60%;
   margin: 10rem 0 0 0;
+  max-width: 580px;
+}
+.about-main .info li::marker {
+  content: "📌  ";
 }
 .about-main .info p {
   max-width: 48rem;
@@ -781,9 +794,8 @@ header {
 }
 header .logo {
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.2rem;
   color: #1a1a1a;
-  font-family: "RoslindaleCondensed";
   text-transform: uppercase;
 }
 
