--- a/assets/css/scss/colors.scss
+++ b/assets/css/scss/colors.scss
@@ -1,4 +1,5 @@
-$background: #f7ead4;
+$background: #f4f2ec;
 $text-color: #1a1a1a;
-$secondary-color: #d99343;
-$tertiary-color: #bab76e;
+$primary-color: #f4a865;
+$secondary-color: #acc5dd;
+$tertiary-color: #f5d14e;
