--- a/assets/css/scss/footer.scss
+++ b/assets/css/scss/footer.scss
@@ -3,7 +3,7 @@ footer {
 	width: 100%;
 	flex-direction: row;
 	justify-content: space-between;
-
+	margin-top: 8rem;
 	p {
 		margin-bottom: 0;
 		font-size: 1rem;
