--- a/assets/css/scss/header.scss
+++ b/assets/css/scss/header.scss
@@ -16,12 +16,12 @@ nav.main-nav {
 	flex-direction: row;
 	align-items: center;
 
-	a.button-main {
-		width: fit-content;
+	a.button-main,
+	a.button-secondary {
 		display: block;
-		width: fit-content;
-		width: stretch;
-		margin: 0;
+		margin: 0 0.5rem;
+		text-align: center;
+		white-space: nowrap;
 	}
 
 	ul {
