--- a/assets/css/scss/header.scss
+++ b/assets/css/scss/header.scss
@@ -22,6 +22,9 @@ nav.main-nav {
 		margin: 0 0.5rem;
 		text-align: center;
 		white-space: nowrap;
+		&:hover {
+			text-decoration: none;
+		}
 	}
 
 	ul {
