--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -451,7 +451,6 @@ a.button-main {
   padding: 0.2rem 1rem;
   border-radius: 2rem;
   background-color: #f4a865;
-  margin-right: 1rem;
   margin-top: 1rem;
 }
 a.button-main:hover {
@@ -572,6 +571,10 @@ nav.main-nav a.button-secondary {
   text-align: center;
   white-space: nowrap;
 }
+nav.main-nav a.button-main:hover,
+nav.main-nav a.button-secondary:hover {
+  text-decoration: none;
+}
 nav.main-nav ul {
   display: flex;
   flex-direction: row;
@@ -650,6 +653,8 @@ footer p {
 .home-main_info .home-main_info_info .cta {
   display: flex;
   flex-direction: row;
+  align-items: baseline;
+  gap: 1rem;
 }
 .home-main_info .home-main_img {
   width: 33%;
@@ -727,6 +732,10 @@ footer p {
   justify-content: flex-start;
   align-items: flex-start;
   gap: 2rem;
+}
+
+.random-projects {
+  margin-top: 10rem;
 }
 
 @media screen and (max-width: 840px) {
