--- a/assets/css/scss/typography.scss
+++ b/assets/css/scss/typography.scss
@@ -10,6 +10,14 @@
 }
 
 @font-face {
+	src: url("../fonts/OhnoBlazeface-14Point.woff2") format("woff2"),
+		url("../fonts/OhnoBlazeface-14Point.woff") format("woff");
+	font-family: "OhnoBlazeface";
+	font-style: normal;
+	font-weight: normal;
+}
+
+@font-face {
 	src: url("../fonts/NeueMontreal-Bold.eot"); /* IE < 9 */
 	src: url("../fonts/NeueMontreal-Bold.eot?#") format("embedded-opentype"),
 		/* IE 9 */ url("../fonts/NeueMontreal-Bold.woff2") format("woff2"),
@@ -39,7 +47,7 @@
 	font-weight: normal;
 }
 
-$display-font: "RoslindaleCondensed";
+$display-font: "OhnoBlazeface";
 $regular-font: "NeueMontreal";
 
 html {
@@ -61,7 +69,7 @@ h1,
 h2,
 h3,
 h4 {
-	font-family: "RoslindaleCondensed";
+	font-family: "OhnoBlazeface";
 	margin: 0;
 }
 
